# quorint-lite

./: CLAUDE.md  QUORINT_CONTEXT.md  README.md  REPORT_LOGIC.md  docker-compose.yml  package-lock.json  package.json  vercel.json
apps/api/: .env.example  .gitignore  Dockerfile  auth.py  main.py  models.py  nixpacks.toml  paddle_client.py  posthog_client.py  pyproject.toml  railway.toml  requirements.txt  resilience.py  test_report.py
apps/api/crons/: retention.py
apps/api/data/: __init__.py  apollo.py  comtrade.py  exchangerate.py  oec.py  pdl.py  perplexity.py  scraper.py  tentimes.py  wdi.py  wits.py
apps/api/jobqueue/: __init__.py  jobs.py  worker.py
apps/api/pdf/: __init__.py  generator.py
apps/api/pipeline/: graph.py  orchestrator.py
apps/api/routers/: __init__.py  reports.py  test_reports.py  webhooks.py
apps/api/scoring/: __init__.py  config_loader.py  engine.py  working_capital.py
apps/api/scoring/configs/: agriculture_raw.yaml  arms_ammunition.yaml  auto_parts.yaml  chemicals_pharma.yaml  food_beverage.yaml  furniture_wood.yaml  instruments_optical.yaml  leather_footwear.yaml  live_animals_meat.yaml  machinery.yaml  metals_steel.yaml  minerals_mining.yaml  paper_printing.yaml  plastics_rubber.yaml  raw_textiles.yaml  stone_ceramics_glass.yaml  textiles_apparel.yaml  tobacco.yaml  toys_sports_misc.yaml  transport_other.yaml  (+1 more)
apps/api/tests/: __init__.py  test_api.py  test_full_pipeline.py  test_worker1.py  test_workers_1_2_3.py
apps/api/workers/: __init__.py  buyers.py  compliance.py  deep_research.py  market_demand.py  synthesis.py
(+54 files in other folders)
