[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorint-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "langchain==1.3.1",
    "langgraph==1.2.0",
    "langfuse==2.60.10",
    "anthropic==0.103.1",
    "httpx==0.27.0",
    "pydantic==2.9.0",
    "supabase==2.9.0",
    "python-dotenv==1.0.0",
    "weasyprint==62.3",
    "comtradeapicall==1.3.1",
    "world_trade_data==0.1.1",
    "redis==5.2.0",
    "pyyaml==6.0.2",
    "pandas==2.2.0",
    "rich==13.9.0",
    "resend==2.4.0",
    "paddle-python-sdk==1.14.1",
    "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
